--- a/src/main/resources/templates/content-users-list.html
+++ b/src/main/resources/templates/content-users-list.html
@@ -105,8 +105,8 @@
                         <div class="box-tools pull-right">
                             <div class="has-feedback">
                                 <input type="text" class="form-control input-sm"
-                                       placeholder="搜索"><span
-                                    class="glyphicon glyphicon-search form-controlfeedback"></span>
+                                       placeholder="搜索"> <span
+                                    class="glyphicon glyphicon-search form-control-feedback"></span>
                             </div>
                         </div>
                         <!--工具栏/-->
@@ -129,7 +129,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="users : ${usersList}">
+                            <tr th:each="users : ${pageInfo.list}">
                                 <td><input name="ids" type="checkbox"></td>
                                 <td th:text="${users.id}"></td>
                                 <td th:text="${users.username}"></td>
@@ -162,26 +162,22 @@
                 <div class="box-footer">
                     <div class="pull-left">
                         <div class="form-group form-inline">
-                            总共2 页，共14 条数据。 每页 <select class="form-control">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select> 条
+                            共<span th:text="${pageInfo.pages}"></span>页，
+                            每页<select th:field="${pageInfo.pageSize}" th:value="${pageInfo.pageSize}" class="form-control" onchange="getPageSize()" id="pageSizeSelect">
+                            <option th:selected="${pageInfo.pageSize==10}" value="10">10</option>
+                            <option th:selected="${pageInfo.pageSize==20}" value="20">20</option>
+                            <option th:selected="${pageInfo.pageSize==50}" value="50">50</option>
+                        </select>条，
+                            共<span th:text="${pageInfo.total}"></span>条。
                         </div>
                     </div>
                     <div class="box-tools pull-right">
                         <ul class="pagination">
-                            <li><a href="#" aria-label="Previous">首页</a></li>
-                            <li><a href="#">上一页</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li><a href="#">下一页</a></li>
-                            <li><a href="#" aria-label="Next">尾页</a></li>
+                            <li><a th:href="@{'/users/findAll?page='+${pageInfo.navigateFirstPage}+'&size='+${pageInfo.pageSize}+''}" aria-label="Previous"><<</a></li>
+                            <li><a th:href="@{'/users/findAll?page='+${pageInfo.prePage} +'&size='+${pageInfo.pageSize}+''}"><</a></li>
+                            <li><span th:text="${pageInfo.pageNum}"></span></li>
+                            <li><a th:href="@{'/users/findAll?page='+${pageInfo.nextPage} +'&size='+${pageInfo.pageSize}+''}">></a></li>
+                            <li><a th:href="@{'/users/findAll?page='+${pageInfo.navigateLastPage}+'&size='+${pageInfo.pageSize}+''}" aria-label="Next">>></a></li>
                         </ul>
                     </div>
                 </div>
@@ -288,6 +284,11 @@
                                 !clicks);
                         });
             });
+
+    function getPageSize() {
+        var pageSize = $("#pageSizeSelect").val();
+        location.href = "/users/findAll?page=1&size=" + pageSize;
+    }
 </script>
 </body>
 </html>
