--- a/src/main/resources/templates/content-orders-list.html
+++ b/src/main/resources/templates/content-orders-list.html
@@ -109,8 +109,7 @@
                                             onclick='confirm("你确认要屏蔽吗？")'>
                                         <i class="fa fa-ban"></i> 屏蔽
                                     </button>
-                                    <button type="button" class="btn btn-default" title=
-                                            "刷新"
+                                    <button type="button" class="btn btn-default" title="刷新"
                                             onclick="window.location.reload();">
                                         <i class="fa fa-refresh"></i> 刷新
                                     </button>
