--- a/src/main/resources/templates/content-users-list.html
+++ b/src/main/resources/templates/content-users-list.html
@@ -96,7 +96,7 @@
                                         <i class="fa fa-file-o"></i> 新建
                                     </button>
                                     <button type="button" class="btn btn-default" title="刷新"
-                                            onclick='location.href="/users/findAll"'>
+                                            onclick="window.location.reload();">
                                         <i class="fa fa-refresh"></i> 刷新
                                     </button>
                                 </div>
