--- a/src/main/resources/templates/content-users-role-list.html
+++ b/src/main/resources/templates/content-users-role-list.html
@@ -95,8 +95,8 @@
                                             th:href="@{'/users/findUserByIdAndAllRole/'+${users.id}}">
                                         <i class="fa fa-file-o"></i> 添加
                                     </button>
-                                    <button type="button" class="btn btn-default" title=
-                                            "刷新">
+                                    <button type="button" class="btn btn-default" title="刷新"
+                                            onclick="window.location.reload();">
                                         <i class="fa fa-refresh"></i> 刷新
                                     </button>
                                 </div>
