--- a/src/main/resources/templates/content-permission-list.html
+++ b/src/main/resources/templates/content-permission-list.html
@@ -82,7 +82,7 @@
         <section class="content"> <!-- .box-body -->
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">列表</h3>
+                    <h3 class="box-title">权限列表</h3>
                 </div>
                 <div class="box-body">
                     <!-- 数据表格 -->
