--- a/src/main/resources/templates/content-product-list.html
+++ b/src/main/resources/templates/content-product-list.html
@@ -84,6 +84,9 @@
         <!-- 正文区域 -->
         <section class="content"> <!-- .box-body -->
             <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">产品列表</h3>
+                </div>
                 <div class="box-body">
                     <!-- 数据表格 -->
                     <div class="table-box">
