--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -2,5 +2,5 @@
     <div class="pull-right hidden-xs">
         <b>Version</b> 1.0.0
     </div>
-    <strong>Copyright &copy; 2017-2019 <a href="https://github.com/hyosunghan">HyosungHan</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2017-2019 <a href="https://github.com/hyosunghan">hyosung</a>.</strong> All rights reserved.
 </footer>
