--- a/src/main/resources/templates/base-login.html
+++ b/src/main/resources/templates/base-login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>登陆</title>
+    <title>登录</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
           name="viewport">
@@ -27,14 +27,14 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        <a href="content-index.html">数据管理系统</a>
+        <a href="content-index.html">AdminLTE</a>
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
-        <p class="login-box-msg">登录系统</p>
+        <p class="login-box-msg">登陆系统</p>
         <form action="/login" method="post">
             <div class="form-group has-feedback">
-                <input type="email" class="form-control" placeholder="Email" name="username">
+                <input type="email" class="form-control" placeholder="邮箱" name="username">
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-xs-8">
                     <div class="checkbox icheck">
-                        <label><input type="checkbox" name="remember-me" value="true"> 记住 下次自动登录</label>
+                        <label><input type="checkbox" name="remember-me" value="true">记住密码</label>
                     </div>
                 </div>
                 <!-- /.col -->
