--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,10 +1,10 @@
 <header class="main-header">
     <!-- Logo -->
-    <a href="all-admin-index.html" class="logo">
+    <a href="/index" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini"><b>数据</b></span>
+        <span class="logo-mini"><b>LTE</b></span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><b>数据</b>后台管理</span>
+        <span class="logo-lg"><b>Admin</b>LTE</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -14,10 +14,38 @@
         </a>
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
+                <!--消息-->
+                <li class ="dropdown messages-menu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class ="fa fa-envelope-o"> </i>
+                        <span class ="label label-success"> 4 </span>
+                    </a>
+                    <ul class ="dropdown-menu">
+                        <li class ="header">您有4条消息</li>
+                        <li>
+                            <ul class ="menu">
+                                <li>
+                                    <a href="#">
+                                        <div class ="pull-left">
+                                            <img src ="../dist/img/user2-160x160.jpg" class ="img-circle" alt ="用户图片">
+                                        </div>
+                                        <h4>
+                                            发件者姓名
+                                            <small> <i class ="fa fa-clock-o"> </i> 5分钟</small>
+                                        </h4>
+                                        <p>消息摘录</p>
+                                    </a>
+                                </li>
+                                ...
+                            </ul>
+                        </li>
+                        <li class ="footer"> <a href="#">查看所有消息</a> </li>
+                    </ul>
+                </li>
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                        <span class="hidden-xs">韩晓星</span>
+                        <span class="hidden-xs">hyosung</span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
@@ -25,7 +53,7 @@
                             <img src="/img/user2-160x160.jpg" class="imgcircle"
                                  alt="User Image">
                             <p>
-                                韩晓星 - 数据管理员
+                                hyosung - 系统管理员
                                 <small>最后登录 11:20AM</small>
                             </p>
                         </li>
