--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -15,33 +15,85 @@
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
                 <!--消息-->
-                <li class ="dropdown messages-menu">
+                <li class="dropdown messages messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class ="fa fa-envelope-o"> </i>
-                        <span class ="label label-success"> 4 </span>
+                        <i class="fa fa-envelope-o"></i>
+                        <span class="label label-success"> 4 </span>
                     </a>
-                    <ul class ="dropdown-menu">
-                        <li class ="header">您有4条消息</li>
+                    <ul class="dropdown-menu">
+                        <li class="header">您有4条消息</li>
                         <li>
-                            <ul class ="menu">
+                            <ul class="menu">
                                 <li>
                                     <a href="#">
-                                        <div class ="pull-left">
-                                            <img src ="../dist/img/user2-160x160.jpg" class ="img-circle" alt ="用户图片">
+                                        <div class="pull-left">
+                                            <img src="/img/user2-160x160.jpg" class="img-circle" alt="用户图片">
                                         </div>
                                         <h4>
-                                            发件者姓名
-                                            <small> <i class ="fa fa-clock-o"> </i> 5分钟</small>
+                                            艾瑞克
+                                            <small><i class="fa fa-clock-o"> </i>5分钟</small>
                                         </h4>
-                                        <p>消息摘录</p>
+                                        <p>do you finish that document?</p>
                                     </a>
                                 </li>
-                                ...
                             </ul>
                         </li>
-                        <li class ="footer"> <a href="#">查看所有消息</a> </li>
+                        <li class="footer"><a href="#">查看所有消息</a></li>
                     </ul>
                 </li>
+                <!--通知-->
+                <li class="dropdown notifications notifications-menu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="fa fa-bell-o"> </i>
+                        <span class="label label-warning"> 10 </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="header">您有10条通知</li>
+                        <li>
+                            <ul class="menu">
+                                <li>
+                                    <a href="#">
+                                        <i class="ion ion-ios-people info"></i>您的快递已发出。
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="footer"><a href="#">查看所有通知</a></li>
+                    </ul>
+                </li>
+                <!--任务-->
+                <li class="dropdown tasks tasks-menu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="fa fa-flag-o"> </i>
+                        <span class="label label-danger"> 9 </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="header">您有9个任务</li>
+                        <li>
+                            <ul class="menu">
+                                <li>
+                                    <a href="#">
+                                        <h3>
+                                            生成中...
+                                            <small class="pull-right">20%</small>
+                                        </h3>
+                                        <div class="progress xs">
+                                            <div class="progress-bar progress-bar-aqua" style="width:20%"
+                                                 role="progressbar" aria-valuenow="20" aria-valuemin="0"
+                                                 aria-valuemax="100">
+                                                <span class="sr-only">完成20%</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="footer">
+                            <a href="#">查看所有任务</a>
+                        </li>
+                    </ul>
+                </li>
+                <!--用户-->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="/img/user2-160x160.jpg" class="user-image" alt="User Image">
