--- a/src/main/resources/templates/base-login.html
+++ b/src/main/resources/templates/base-login.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="/plugins/adminLTE/css/AdminLTE.css">
     <link rel="stylesheet" href="/plugins/iCheck/square/blue.css">
 </head>
-<body class="hold-transition login-page">
+<body class="hold-transition login-page" style='background-image: url("/img/photo2.png");background-attachment: fixed;background-size: 100% 100%;'>
 <div class="login-box">
     <div class="login-logo">
         <a href="content-index.html">AdminLTE</a>
