--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -116,8 +116,7 @@
                                 >修改密码</a>
                             </div>
                             <div class="pull-right">
-                                <a href="/logout" class="btn btn-default btn-flat"
-                                >注销</a>
+                                <a href="/" class="btn btn-default btn-flat">注销</a>
                             </div>
                         </li>
                     </ul>
