--- a/src/main/resources/templates/content-syslog-list.html
+++ b/src/main/resources/templates/content-syslog-list.html
@@ -312,8 +312,6 @@
             'info': true,          //左下角显示底端信息
             'searching': true,     //右上角搜索栏
             'ordering': true,       //表格列排序
-            // 'scrollCollapse': true,  //滚动条
-            // 'scrollY': "200",        //滚动条
             "pagingType": "full_numbers",
                         // simple               上页，下页
                         // simple_numbers       上页，下页，数字
@@ -321,9 +319,10 @@
                         // full_numbers         首页，尾页，上页，下页，数字
                         // first_last_numbers   首页，尾页，数字
             "language": {
+                "sEmptyTable": "没有相关数据",
                 "info": "当前第_PAGE_页，共_PAGES_页",
                 "sInfo": "当前显示第_START_到第_END_条，共_TOTAL_条",
-                "sInfoFiltered": "(从_MAX_条筛选)",
+                "sInfoFiltered": "(全部记录_MAX_条)",
                 "sInfoEmpty": "共筛选到0条",
                 "sSearch": "搜索:",
                 "sLengthMenu": "每页显示_MENU_条",
