--- a/src/main/resources/templates/content-syslog-list.html
+++ b/src/main/resources/templates/content-syslog-list.html
@@ -312,6 +312,7 @@
             'info': true,          //左下角显示底端信息
             'searching': true,     //右上角搜索栏
             'ordering': true,       //表格列排序
+            "autoWidth": false,
             "pagingType": "full_numbers",
                         // simple               上页，下页
                         // simple_numbers       上页，下页，数字
@@ -320,12 +321,12 @@
                         // first_last_numbers   首页，尾页，数字
             "language": {
                 "sEmptyTable": "没有相关数据",
-                "info": "当前第_PAGE_页，共_PAGES_页",
-                "sInfo": "当前显示第_START_到第_END_条，共_TOTAL_条",
+                "info": "当前显示第_PAGE_页，共_PAGES_页",
+                "sInfo": "共_TOTAL_条，当前显示第_START_到_END_条",
                 "sInfoFiltered": "(全部记录_MAX_条)",
                 "sInfoEmpty": "共筛选到0条",
                 "sSearch": "搜索:",
-                "sLengthMenu": "每页显示_MENU_条",
+                "sLengthMenu": "显示_MENU_条",
                 "sZeroRecords": "未筛选到相关内容",
                 "paginate": {
                     "sFirst": "首页",
